Fix jump

--- a/components/Login/login.styl
+++ b/components/Login/login.styl
@@ -9,7 +9,7 @@
 
 .login-form
   // overflow hidden
-  // height 350px
+  height 350px
   // .fp-input
     // margin-bottom 20px
   .termes-label 
